data/derived/fa15/progs/unify/prog3768.ml.out
Characters 149-152:
  | Sine sin -> Printf.printf ("sin(pi*%s"^ sin ^")" );
                                            ^^^
Error: This expression has type expr but an expression was expected of type
         string
